// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResponseMessage constructor should construct properly with metadata 1`] = `
Immutable.Record {
  "type": "metadata.type",
  "from": "metadata.name",
  "text": "text",
  "timestamp": "timestamp",
}
`;

exports[`ResponseMessage constructor should construct properly with minimum params 1`] = `
Immutable.Record {
  "type": "type",
  "from": "from",
  "text": "text",
  "timestamp": "timestamp",
}
`;

exports[`ResponseMessage constructor should construct with "agent" type and "Agent" from when from is userId 1`] = `
Immutable.Record {
  "type": "agent",
  "from": "Agent",
  "text": "text",
  "timestamp": "timestamp",
}
`;
